# sim-plugin-stata

./: .gitignore  CHANGELOG.md  LICENSE-NOTICE.md  README.md  pyproject.toml
fixtures/: stata_ok.do
src/sim_plugin_stata/: __init__.py  compatibility.yaml  driver.py
src/sim_plugin_stata/_skills/stata/: SKILL.md
src/sim_plugin_stata/_skills/stata/base/: driver_upgrade.md
src/sim_plugin_stata/_skills/stata/base/reference/: README.md  safety.md  stata_driver.md
src/sim_plugin_stata/_skills/stata/base/snippets/: README.md
src/sim_plugin_stata/_skills/stata/base/workflows/: README.md
src/sim_plugin_stata/_skills/stata/sdk/18/: notes.md
src/sim_plugin_stata/_skills/stata/sdk/19/: notes.md
tests/: test_protocol.py  test_stata_driver.py  test_wheel_contents.py
